<resources>
    <string name="app_name">P⁶</string>

    <string name="label_setup_activity">Setup Payments</string>
    <string name="hint_setup_event_price">50</string>
    <string name="hint_setup_event_reason">Example: Hey guys, we need this amount for beers and nachos!</string>
    <string name="label_setup_event_reason">Payment Description</string>

    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_string_onboarding">Onboarding</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="facebook_app_id">1582586055329685</string>

    <string name="button_create_payment_link">Plug-in Payments!</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_menu_share">Share</string>
    <string name="pref_signout">Sign Out</string>
    <string name="pref_signout_summary">Sign out from PSix</string>
    <string name="pref_signout_key">signout</string>
    <string name="pref_paypal_title">Your PayPal Account</string>
    <string name="pref_paypal_key">paypal</string>
    <string name="pref_paypal_hint">account@gmail.com</string>
    <string name="pref_paypal_summary">Receive payments to this account</string>
    <string name="toast_sign_out">Signed Out</string>
    <string name="toast_invalid_email">Please enter a valid email account</string>
    <string name="your_events">Your Events</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_status">Payments Status</string>
    <string name="dollar_per">per attendee</string>
    <string name="you_invited">You invited 0 people.</string>
    <string name="please_wait">Please wait</string>
    <string name="pluging_in">Pluging-in your payments</string>
    <string name="fetching_events">Fetching your events</string>
    <string name="paymentes_adding_failed">Something went wrong...</string>
    <string name="share_copied">URL Copied</string>
    <string name="shared">Shared Successfully</string>
    <string name="title_share_activity">Share Payment</string>

    <plurals
        name="you_invited">
        <item quantity="zero">You haven\'t invited anyone yet.</item>
        <item quantity="one">You have invited one person.</item>
        <item quantity="other">You have invited %d people.</item>
    </plurals>

    <string name="onboarding_intro">Welcome</string>
    <string name="onboaring_ext_intro">Plug-in awesome payments into your Facebook Events!</string>
    <string name="share_payment_link_title">Share Payment Link</string>
    <string name="share_by_post">Share by post</string>
    <string name="exit_share">Continue</string>
    <string name="share_instructions">Share the link manually or post it in as a post in your event.</string>
    <string name="psix_share_url_tag">PSix Share URL</string>

    <string name="share_message">%1$s.\u000APayment per attendee: $%2$d.\u000APay through this link: %3$s.\u000A\u000APayments plugged-in using #psix - Awesome Facebook Events Payments.</string>
    <string name="label_empty_events">You have no future events</string>
    <string name="pref_user_name">user_name</string>
    <string name="placeholder_username">John Appleseed</string>
    <string name="title_activity_refresh">Refresh</string>
</resources>
