<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.paypal.psix.fragments.LargeIconPreference
        android:selectable="false"
        android:key="@string/pref_user_name"
        android:title="@string/placeholder_username"/>

    <EditTextPreference
        android:title="@string/pref_paypal_title"
        android:key="@string/pref_paypal_key"
        android:hint="@string/pref_paypal_hint"
        android:inputType="text"
        android:summary="@string/pref_paypal_summary"
        android:singleLine="true" />

    <Preference android:title="@string/pref_signout"
        android:key="@string/pref_signout_key"
        android:summary="@string/pref_signout_summary"/>

</PreferenceScreen>